--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,18 @@
     },
     "require": {
         "php": "^8.1",
-        "codeigniter4/framework": "^4.0",
-        "codeigniter4/shield": "^1.1",
-        "yllumi/ci4-pages": "^1.0",
         "ext-intl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
+        "codeigniter4/framework": "^4.0",
         "codeigniter4/settings": "^2.2",
+        "codeigniter4/shield": "^1.1",
         "firebase/php-jwt": "^6.10",
         "google/recaptcha": "^1.3",
         "laminas/laminas-escaper": "^2.9",
-        "symfony/yaml": "^6.4"
+        "symfony/yaml": "^6.4",
+        "yllumi/ci4-pages": "^1.0",
+        "yllumi/heroic": "^1.0"
     },
     "require-dev": {
         "codeigniter/coding-standard": "^1.5",
