--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,14 @@
         "ext-intl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
+        "abordage/html-min": "^0.2.2",
         "codeigniter4/framework": "^4.0",
         "codeigniter4/settings": "^2.2",
         "codeigniter4/shield": "^1.1",
         "firebase/php-jwt": "^6.10",
         "google/recaptcha": "^1.3",
         "laminas/laminas-escaper": "^2.9",
+        "matthiasmullie/minify": "^1.3",
         "symfony/yaml": "^6.4",
         "yllumi/ci4-pages": "^1.0",
         "yllumi/heroic": "^1.0"
