--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "google/recaptcha": "^1.3",
         "laminas/laminas-escaper": "^2.9",
         "matthiasmullie/minify": "^1.3",
+        "minishlink/web-push": "^9.0",
         "symfony/yaml": "^6.4",
         "yllumi/ci4-pages": "^1.0",
         "yllumi/heroic": "^1.0"
