--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laminas/laminas-escaper": "^2.9",
         "matthiasmullie/minify": "^1.3",
         "minishlink/web-push": "^9.0",
+        "phpmailer/phpmailer": "^6.10",
         "symfony/yaml": "^6.4",
         "yllumi/ci4-pages": "^1.0",
         "yllumi/heroic": "^1.0"
