--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "codeigniter4/framework": "^4.0",
         "codeigniter4/settings": "^2.2",
         "czproject/git-php": "^4.4",
+        "endroid/qr-code": "^6.0",
         "firebase/php-jwt": "^6.11",
         "google/recaptcha": "^1.3",
         "laminas/laminas-escaper": "^2.9",
