--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     },
     "require-dev": {
         "codeigniter/coding-standard": "^1.5",
+        "deployer/deployer": "^7.5",
         "fakerphp/faker": "^1.9",
         "friendsofphp/php-cs-fixer": "~3.41.0",
         "kint-php/kint": "^5.0.4",
