--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Config\\": "app/Config/"
+            "Config\\": "app/Config/",
+            "Referral\\": "modules/Referral/"
         },
         "exclude-from-classmap": [
             "**/Database/Migrations/**"
